# cortex

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.build.yml
scripts/: build.sh  format.sh
src/: cortex.h
src/style/: look_and_feel.cpp  look_and_feel.h
